# stray

./: Dockerfile  README.md  compose.yaml
backend/: bun.lockb  package.json  tsconfig.json
backend/public/: gattoFiero.avif
backend/src/: index.ts
backend/src/common/: commonFunctions.ts
contracts/evm/: Channel.sol
extension/: .eslintignore  .eslintrc  .prettierignore  .prettierrc  bun.lockb  index.html  package.json  tailwind.config.js
extension/public/: manifest.json
extension/src/: App.tsx  index.css
extension/src/assets/images/: 404.avif  gatto.avif  logo.avif
extension/src/common/: commonFunctions.ts
extension/src/components/: chat.tsx  header.tsx  logged.tsx  login.tsx  message.tsx  sendMessage.tsx
extension/src/contexts/: chat.tsx  session.tsx
extension/src/hooks/: useChat.tsx  useSession.tsx
extension/src/layouts/: chat.tsx  global.tsx
extension/src/pages/: main.tsx
extension/src/types/: global.tsx
workers/: Cargo.toml
workers/protobuf/: pull.proto  push.proto
workers/src/: main.rs
