[package]
name = "workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
once_cell = "1.19.0"
redis = "0.25.2"
reqwest = "0.12.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
